fix browser-not-supported div tag so it does not look out of alignment

--- a/_sass/layout/_browser-not-supported.scss
+++ b/_sass/layout/_browser-not-supported.scss
@@ -1,8 +1,8 @@
 // layout for the area that displays if a browser is not supported.
 
 .browser-not-supported {
-    display: none;
-    height: 50px;
+    display: block;
+    width: 100%;
     background-color: red;
     margin-bottom: 10px;
 }
